--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@stencil/core": "^2.13.0",
+    "focus-visible": "^5.2.0",
     "nanoid": "^4.0.0"
   },
   "devDependencies": {
