--- a/lerna.json
+++ b/lerna.json
@@ -1,17 +1,13 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "version": "0.0.0",
+  "version": "0.0.0-beta.1",
   "npmClient": "yarn",
-  "npmClientArgs": [
-    "--pure-lockfile"
-  ],
-  "packages": [
-    "packages/*"
-  ],
+  "npmClientArgs": ["--pure-lockfile"],
+  "packages": ["packages/*"],
   "command": {
     "version": {
-      "allowBranch": "main"
+      "allowBranch": "next"
     },
     "publish": {
       "conventionalCommits": true,
