--- a/packages/integration-react/package.json
+++ b/packages/integration-react/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@copperui/react",
   "sideEffects": false,
+  "type": "module",
   "version": "0.1.1",
   "license": "MIT",
   "description": "Integração do copperui com o React.",
@@ -25,7 +26,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@copperui/core": "workspace:^"
+    "@copperui/core": "^0.1.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -53,5 +54,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "5c8653f5e581bc3ddd7af2db76d26950f6803dad"
 }
