feat(core): components: brx-tabs: add tabClick event

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,5 +48,6 @@
   },
   "optionalDependencies": {
     "@popperjs/core": "^2.11.6"
-  }
+  },
+  "gitHead": "5c8653f5e581bc3ddd7af2db76d26950f6803dad"
 }
