fix(core): include hydrate in npm package and add to .gitignore

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,7 +17,8 @@
   },
   "files": [
     "dist/",
-    "loader/"
+    "loader/",
+    "hydrate/"
   ],
   "scripts": {
     "dev": "yarn run start",
